--- a/css/aboutstyle.css
+++ b/css/aboutstyle.css
@@ -330,7 +330,7 @@ h2 a {
     }
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1100px) {
     .parent {
         display:block;
     }
@@ -341,6 +341,9 @@ h2 a {
     }
     .projects-btn {
         width: 30%;
+    }
+    .me {
+        width: 15%;
     }
 }
 
